install(DIRECTORY GLSL 
    DESTINATION ${IGN_RENDERING_RESOURCE_PATH}/ogre/media/rtshaderlib112)

install(DIRECTORY HLSL_Cg 
    DESTINATION ${IGN_RENDERING_RESOURCE_PATH}/ogre/media/rtshaderlib112)


install(DIRECTORY materials
    DESTINATION ${IGN_RENDERING_RESOURCE_PATH}/ogre/media/rtshaderlib112)
